--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@ oprofile_data
 avidemux/winInstaller/AvidemuxVersion.nsh
 avidemux/qt4/xdg_data/org.avidemux.Avidemux.appdata.xml
 *.DS_Store
+.vscode/
